--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "axios": "^1.11.0",
+    "echarts": "^5.6.0",
+    "element-plus": "^2.10.7",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
+    "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.1",
     "vuetify": "^3.9.5"
   },
